Remove irrelevant html details

--- a/my-recipes/index.html
+++ b/my-recipes/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}RenderMd{% endblock %}</title>
+    <title>{% block title %}My Recipes{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Render my Markdown Wiki">
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/github_md.css') }}">
-    <script src="https://unpkg.com/mermaid@8.4.8/dist/mermaid.min.js"></script>
+    <meta name="description" content="Recipes static site generator">
 
 <style>
 .markdown-body {
