--- a/my-recipes/index.html
+++ b/my-recipes/index.html
@@ -5,9 +5,62 @@
     <title>{% block title %}My Recipes{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="description" content="Recipes static site generator">
 
 <style>
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 .markdown-body {
     box-sizing: border-box;
     min-width: 200px;
@@ -633,11 +686,11 @@
   clear: both;
 }
 
-.markdown-body>:first-child {
+.markdown-body:first-child {
   margin-top: 0!important;
 }
 
-.markdown-body>:last-child {
+.markdown-body:last-child {
   margin-bottom: 0!important;
 }
 
@@ -672,11 +725,11 @@
   border-left: .25em solid #dfe2e5;
 }
 
-.markdown-body blockquote>:first-child {
+.markdown-body blockquote:first-child {
   margin-top: 0;
 }
 
-.markdown-body blockquote>:last-child {
+.markdown-body blockquote:last-child {
   margin-bottom: 0;
 }
 
@@ -740,7 +793,7 @@
   word-wrap: break-all;
 }
 
-.markdown-body li>p {
+.markdown-body lip {
   margin-top: 16px;
 }
 
@@ -816,7 +869,7 @@
   word-wrap: normal;
 }
 
-.markdown-body pre>code {
+.markdown-body precode {
   padding: 0;
   margin: 0;
   font-size: 100%;
@@ -1012,6 +1065,25 @@
 </head>
 
 <body class="markdown-body">
+
+<div class="topnav" id="myTopnav">
+  <a href="https://recipes.pardinas.co.uk" class="active">Home</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 
 {% block content %}
 
